Fix bug 167245: when opening tabs for GetURL events, or various Help menu items, always open the new tab in the front irrespective of the "load in background" pref. r=pinkerton